# AnimalCrossingHours

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: link.sh  loop_points.csv  readme.md
data/chimes/: Meekay I Chimes.it
data/raw/: readme.md
src/: acnh_play_speakers.py  acnh_state_machine.py  play_loop.py
